continued working on buttons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript Quiz!</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -11,6 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
+    <title>JavaScript Quiz!</title>
   </head>
   <body>
     <div class="container">
@@ -32,6 +32,7 @@
         <button class="btn" id= "startBtn">Start Quiz</button>
       </div>
     </div>
+    <footer class="answerBar"></footer>
     <!-- Second Page to Show -->
     <script src="./script.js"></script>
   </body>
