added high scores page

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
       <header>
         <!-- As a heading -->
         <nav class="navbar navbar-light justify-content-between">
-          <a class="navbar-brand mb-0 h1" href="#">View Highscores</a>
+          <a class="navbar-brand mb-0 h1" id="viewHSBtn" href="./highscores.html">View Highscores</a>
           <section class="navbar-text" id="timer">Time: 75</section>
         </nav>
       </header>
       <!-- First page to show -->
-      <div class="mainContent btn-group-vertical">
+      <div class="mainContent">
         <h4>Coding Quiz Challenge</h4>
         <p>
           Try to answer the following code-related questions within the time
           limit. Keep in mind that incorrect answers will penalize your
           score/time by ten seconds!
         </p>
-        <button class="btn" id= "startBtn">Start Quiz</button>
+        <button class="btn" id="startBtn">Start Quiz</button>
       </div>
     </div>
     <footer class="answerBar"></footer>
