--- a/highscores.html
+++ b/highscores.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-    crossorigin="anonymous"
-  />
-  <link rel="stylesheet" href="./style.css" />
-  <title>JS Quiz-High Scores</title>
-</head>
-<body>
-    
-</body>
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>JS Quiz-High Scores</title>
+  </head>
+  <body>
+    <div class="container">
+      <!-- First page to show -->
+      <div class="mainContent">
+        <div id = "scoresAppend">
+          <h4>High Scores</h4>
+        </div>
+        <div class="highScorebtns">
+          <button class="btn" id="goBackBtn"><a href="./index.html">Go Back</a></button>
+          <button class="btn" id="clearScores">Clear Scores</button>
+        </div>
+      </div>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
