--- a/highscores.html
+++ b/highscores.html
@@ -16,15 +16,17 @@
     <div class="container">
       <!-- First page to show -->
       <div class="mainContent">
-        <div id = "scoresAppend">
+        <div id="scoresAppend">
           <h4>High Scores</h4>
         </div>
         <div class="highScorebtns">
-          <button class="btn" id="goBackBtn"><a href="./index.html">Go Back</a></button>
+          <button class="btn" id="goBackBtn">
+            <a href="./index.html">Go Back</a>
+          </button>
           <button class="btn" id="clearScores">Clear Scores</button>
         </div>
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
