finished clear button

--- a/highscores.html
+++ b/highscores.html
@@ -16,9 +16,8 @@
     <div class="container">
       <!-- First page to show -->
       <div class="mainContent">
-        <div id="scoresAppend">
-          <h4>High Scores</h4>
-        </div>
+        <h4>High Scores</h4>
+        <div id="scoresAppend"></div>
         <div class="highScorebtns">
           <button class="btn" id="goBackBtn">
             <a href="./index.html">Go Back</a>
